Overhaul of the mod. Functional tags and filtering
- Added support for active tag filters in ConfigManager.
- Updated ModMenuConfigWriter to handle nullable JSON configurations.
- Refactored ModTag and TagDatabase for improved tag management.
- Removed deprecated ModBadgeMixin and ModMenuFilterMixin classes.
- Implemented ModBadgeLibraryMixin to dynamically manage library badges.
- Created ModBadgeRendererMixin for custom badge rendering based on tags.
- Added ModListFilterMixin to filter mods based on active tags.
- Enhanced ModsScreenMixin to include tag filter toggle buttons in the UI.
- Updated default_tags.json with additional tags for better mod categorization.
- Updated fabric.mod.json and mixins configuration for new mixin classes.
- Added Gradle properties for multiple Minecraft versions and dependencies.
- Introduced Stonecutter configuration for build management.